--- a/template.yml
+++ b/template.yml
@@ -12,16 +12,16 @@ Parameters:
 
 Metadata:
   AWS::ServerlessRepo::Application:
-    Name: ServerlessApplicationEphemerality
-    Description: Serverless Application Ephemerality
+    Name: ServerlessApplicationEphemeralityMinimum
+    Description: Serverless Application Ephemerality Minimum
     Author: tanaka-takurou
     SpdxLicenseId: MIT
     LicenseUrl: LICENSE.txt
     ReadmeUrl: README.md
     Labels: ['ServerlessRepo']
-    HomePageUrl: https://github.com/tanaka-takurou/serverless-application-ephemerality-page-go
+    HomePageUrl: https://github.com/tanaka-takurou/serverless-application-ephemerality-page-go/tree/minimum
     SemanticVersion: 0.0.1
-    SourceCodeUrl: https://github.com/tanaka-takurou/serverless-application-ephemerality-page-go
+    SourceCodeUrl: https://github.com/tanaka-takurou/serverless-application-ephemerality-page-go/tree/minimum
 
 Resources:
   EphemeralityApi:
@@ -46,7 +46,7 @@ Resources:
       Environment:
         Variables:
           COUNT: "0"
-          LIMIT: "3"
+          LIMIT: "0"
           REGION: !Ref AWS::Region
           STACK_NAME: !Ref AWS::StackName
           FUNCTION_NAME: !Ref EphemeralityFunctionName
@@ -56,22 +56,6 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref EphemeralityFunction
       Principal: apigateway.amazonaws.com
-  ScheduledRule:
-    Type: AWS::Events::Rule
-    Properties:
-      Description: ScheduledRule
-      ScheduleExpression: 'rate(1 minute)'
-      State: 'ENABLED'
-      Targets:
-        - Arn: !GetAtt EphemeralityFunction.Arn
-          Id: TargetEphemeralityFunction
-  PermissionForEventsToInvokeLambda:
-    Type: AWS::Lambda::Permission
-    Properties:
-      FunctionName: !Ref EphemeralityFunction
-      Action: 'lambda:InvokeFunction'
-      Principal: 'events.amazonaws.com'
-      SourceArn: !GetAtt ScheduledRule.Arn
   EphemeralityFunctionRole:
     Type: AWS::IAM::Role
     Properties:
