--- a/template.yml
+++ b/template.yml
@@ -12,8 +12,8 @@ Parameters:
 
 Metadata:
   AWS::ServerlessRepo::Application:
-    Name: ServerlessApplicationEphemeralityMinimum
-    Description: Serverless Application Ephemerality Minimum
+    Name: Serverless Application Minimum
+    Description: This application is deleted when accessed.
     Author: tanaka-takurou
     SpdxLicenseId: MIT
     LicenseUrl: LICENSE.txt
