--- a/template.yml
+++ b/template.yml
@@ -12,8 +12,8 @@ Parameters:
 
 Metadata:
   AWS::ServerlessRepo::Application:
-    Name: ServerlessApplicationEphemeralityScheduled
-    Description: Serverless Application Ephemerality Scheduled
+    Name: Serverless Application Scheduled
+    Description: This application is deleted after certain period.
     Author: tanaka-takurou
     SpdxLicenseId: MIT
     LicenseUrl: LICENSE.txt
