--- a/template.yml
+++ b/template.yml
@@ -109,6 +109,10 @@ Resources:
                   - 'iam:DeleteRolePolicy'
                   - 'iam:DeleteRole'
                 Resource: '*'
+              - Effect: 'Allow'
+                Action:
+                  - 'apigateway:*'
+                Resource: '*'
 
 Outputs:
   APIURI:
