fix template.yml (Add Policy)

--- a/template.yml
+++ b/template.yml
@@ -53,6 +53,7 @@ Resources:
             - 'lambda:*'
             - 'events:RemoveTargets'
             - 'events:DeleteRule'
+            - 'iam:DetachRolePolicy'
             - 'iam:DeleteRolePolicy'
             - 'iam:DeleteRole'
           Resource: '*'
